# salary-management

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: employees.py  metrics.py  salary.py
app/core/: config.py
app/db/: models.py  session.py
app/schemas/: employee.py  metrics.py  salary.py
app/services/: metrics_service.py  salary_service.py
tests/: conftest.py  test_config.py  test_employees.py  test_metrics.py  test_salary.py
